# black_hole

./: .gitignore  2D_lensing.cpp  BUGFIX_SUMMARY.md  CHINESE_LOCALIZATION_SUMMARY.md  CLAUDE.md  CMakeLists.txt  CODE_GUIDE_CN.md  CODE_REVIEW_REPORT.md  CONTROLS.md  CONTROLS_CN.md  CPU-geodesic.cpp  CROSS_PLATFORM_BUILD_CN.md  CROSS_PLATFORM_SUMMARY.md  HDR_RENDERING.md  HONEST_REVIEW.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MIDTERM_P1_IMPROVEMENTS.md  PERFORMANCE_FIXES.md  PHASE4_FEATURES.md  PHASE5_FEATURES.md  PHASE6_FEATURES.md  PHASE7-10_COMPLETION_SUMMARY.md  PHASE8_REFACTORING_PLAN.md  PROJECT_AUDIT_REPORT.md  PROJECT_REVIEW.md  QUICKSTART_CN.md  README.md  README_CN.md  REFACTORING_PLAN.md  ULTRATHINK_REVIEW.md  VISION.md  batch_render.sh  black_hole.cpp  bloom_extract.frag  build_linux.sh  build_macos.sh  build_windows.bat  fix_dependencies.sh  gaussian_blur.frag  (+13 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: cross-platform-build.yml
archive/: README.md
docs/: changelog.md  code-structure.md  contributing.md  implementation-details.md  index.md  installation.md  overview.md  physics-theory.md  physics.md  shaders.md  troubleshooting.md  usage.md
docs/api/: reference.md
python/: README.md  black_hole.py  geodesic.comp  requirements.txt
src/: black_hole.cpp
src/config/: preset_manager.hpp
src/rendering/: bloom_renderer.hpp  shader_manager.hpp
src/shaders/: grid.frag  grid.vert
src/ui/: gui_manager.cpp  gui_manager.hpp
src/utils/: exceptions.hpp  gl_debug.hpp  gl_utils.hpp  logger.hpp  performance_monitor.hpp  ray_path_exporter.hpp
vs_code/: c_cpp_properties.json  launch.json  settings.json  tasks.json
